Modified issues and receipt page

--- a/AGDPMS.Shared/Components/Layout/MainLayout.razor
+++ b/AGDPMS.Shared/Components/Layout/MainLayout.razor
@@ -92,8 +92,8 @@
             <div class="collapse" id="inventory-menu">
                 <ul class="nav flex-column ps-4 small">
                     <li class="nav-item"><NavLink href="/inventory/stocks" class="nav-link text-white"><span>Tồn kho</span></NavLink></li>
-                    <li class="nav-item"><NavLink href="/inventory/receipts" class="nav-link text-white"><span>Xuất kho</span></NavLink></li>
-                    <li class="nav-item"><NavLink href="/inventory/issues" class="nav-link text-white"><span>Nhập kho</span></NavLink></li>
+                    <li class="nav-item"><NavLink href="/inventory/issues" class="nav-link text-white"><span>Xuất kho</span></NavLink></li>
+                    <li class="nav-item"><NavLink href="/inventory/receipts" class="nav-link text-white"><span>Nhập kho</span></NavLink></li>
                 </ul>
             </div>
         </li>
